--- a/Team39_Data_Science_Project_Movie_Data.ipynb
+++ b/Team39_Data_Science_Project_Movie_Data.ipynb
@@ -727,7 +727,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Show the plot\n",
-    "plt.show()"
+    "plt.show();"
    ]
   },
   {
@@ -805,7 +805,7 @@
     ")\n",
     "\n",
     "# Show the plot\n",
-    "fig.show()"
+    "fig.show();"
    ]
   },
   {
@@ -873,7 +873,7 @@
     "fig.update_layout(yaxis_title='', yaxis=dict(showticklabels=False))\n",
     "\n",
     "# Show the plot\n",
-    "fig.show()"
+    "fig.show();"
    ]
   },
   {
@@ -1038,7 +1038,7 @@
     "plt.xlabel('Runtime in Minutes')\n",
     "plt.ylabel('Audience Score')\n",
     "plt.title('Runtime vs Audience Score')\n",
-    "plt.show()\n"
+    "plt.show();\n"
    ]
   },
   {
@@ -1082,7 +1082,7 @@
     "plt.xlabel('Critic Score')\n",
     "plt.ylabel('Audience Score')\n",
     "plt.title('Critic Score vs Audience Score')\n",
-    "plt.show()\n"
+    "plt.show();\n"
    ]
   },
   {
@@ -1705,7 +1705,7 @@
     "    plt.imshow(wordcloud, interpolation='bilinear')\n",
     "    plt.axis('off')\n",
     "    plt.title('Word Cloud of Movie Quotes (Full Dataset)')\n",
-    "    plt.show()\n",
+    "    plt.show();\n",
     "\n",
     "# Generate word cloud\n",
     "print(\"Generating word cloud...\")\n",
